<resources>
    <string name="UVI_level_0">Weak</string>
    <string name="UVI_level_1">Moderate</string>
    <string name="UVI_level_2">Strong</string>
    <string name="UVI_level_3">Very strong</string>
    <string name="UVI_level_4">Severe</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_app_name">About Themes</string>
    <string name="about_securitycenter_icp">备案号：京ICP备10046444号-51A &gt;</string>
    <string name="about_version_update">What\'s new</string>
    <string name="accessibiliy_ad">广告</string>
    <string name="accessibiliy_description_content_account">Profile</string>
    <string name="accessibiliy_description_content_ad">Ad</string>
    <string name="accessibiliy_description_content_add_resource">Add items</string>
    <string name="accessibiliy_description_content_back">Back</string>
    <string name="accessibiliy_description_content_comment">Comment</string>
    <string name="accessibiliy_description_content_favorite">Add to favorites</string>
    <string name="accessibiliy_description_content_more">More</string>
    <string name="accessibiliy_description_content_search">Search</string>
    <string name="accessibiliy_description_content_share">Share</string>
    <string name="account_info">My account</string>
    <string name="account_name_not_login">Sign in</string>
    <string name="account_unactivated">Account not activated</string>
    <string name="actionbar_button_up_description">Back</string>
    <string name="ad_app_download_start">Starting download…</string>
    <string name="ad_app_is_downloading">Downloading…</string>
    <string name="ad_begin_to_download_tip">Starting to download…</string>
    <string name="ad_begin_to_install_tip">Installing…</string>
    <string name="ad_close">Closed this ad</string>
    <string name="ad_closed_tip">You\'ll see fewer ads of this type</string>
    <string name="ad_details">Details</string>
    <string name="ad_download_download">Download</string>
    <string name="ad_download_download_now">Download</string>
    <string name="ad_download_install">Install</string>
    <string name="ad_download_now">Download</string>
    <string name="ad_download_number_text_unit_hundred_million">%1$s亿</string>
    <string name="ad_download_number_text_unit_ten_thousand">%1$s万</string>
    <string name="ad_download_open">Open</string>
    <string name="ad_download_pause">Pause</string>
    <string name="ad_download_pending">Pending</string>
    <string name="ad_download_progress">%1$d%%</string>
    <string name="ad_download_resume">Resume</string>
    <string name="ad_downloading_tip">This item is being downloaded. You can view progress in the Notification shade.</string>
    <string name="ad_experience_now">Open</string>
    <string name="ad_in_downloading">Downloading</string>
    <string name="ad_in_installing">Installing</string>
    <string name="ad_installing">Installing</string>
    <string name="ad_sub_textview_ad">广告</string>
    <string name="ad_sub_textview_divider">m</string>
    <string name="ad_sub_textview_introduction">介绍</string>
    <string name="ad_sub_textview_permission">权限</string>
    <string name="ad_sub_textview_privacy">隐私</string>
    <string name="ad_sub_textview_version_with_colon">版本：</string>
    <string name="ad_tag_text_1">流行</string>
    <string name="ad_tag_text_2">时尚</string>
    <string name="add">Add</string>
    <string name="add_home_icon_success">Added successfully</string>
    <string name="add_resource_detail_fail">Can\'t add resource</string>
    <string name="afternoon">Afternoon</string>
    <string name="air_quality_index_abbreviation">AQI</string>
    <string name="all_resources">All</string>
    <string name="allow">Granted</string>
    <string name="already_latest_version">Up to date</string>
    <string name="already_newest_version">Current version is up to date</string>
    <string name="am">AM</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anonymous_resource_link_error">Couldn\'t add</string>
    <string name="anonymous_resource_link_hint">Some items aren\'t added to your account. Add now?</string>
    <string name="anonymous_resource_link_now">Add</string>
    <string name="anonymous_resource_link_retry">An error occurred. Wait a minute or two and try again.</string>
    <string name="anonymous_resource_link_retry_cancel">Cancel</string>
    <string name="anonymous_resource_link_retry_confirm">Try again</string>
    <string name="anonymous_resource_link_success">Added successfully</string>
    <string name="anonymous_resource_linking">Adding…</string>
    <string name="anonymous_resource_login_confirm">Sign in</string>
    <string name="anonymous_resource_login_title">Sign in first</string>
    <string name="anonymous_resource_unlink">No thanks</string>
    <string name="anonymous_resource_unlink_cancel">Cancel</string>
    <string name="anonymous_resource_unlink_confirm">Don\'t add</string>
    <string name="apply_theme_with_ringtones">Use theme ringtones</string>
    <string name="basic_mode">Offline mode</string>
    <string name="basic_mode_desc">Don\'t allow this app to connect to the internet, only access and use items on your device (e.g. photos, audio, and videos). None of your personal information will be collected.</string>
    <string name="browse_mode">Online mode</string>
    <string name="browse_mode_desc">Allow this app to connect to the internet, access online content, as well as use items on your device (e.g. photos, audio, and videos). None of your personal information will be collected.</string>
    <string name="close">Close</string>
    <string name="create_home_icon">Home screen shortcut</string>
    <string name="de_mix_mode_aod">Always-on display</string>
    <string name="de_mix_mode_aod_desc">Customize backgrounds and clock format</string>
    <string name="de_mix_mode_desktop">Home screen</string>
    <string name="de_mix_mode_desktop_desc">Wallpaper and clock</string>
    <string name="de_mix_mode_global">System elements</string>
    <string name="de_mix_mode_global_desc">Notification shade, Phone, Messaging, etc.</string>
    <string name="de_mix_mode_icon">Icons</string>
    <string name="de_mix_mode_icon_desc">App icons</string>
    <string name="de_mix_mode_lockscreen">Lock screen</string>
    <string name="de_mix_mode_lockscreen_desc">Wallpaper and clock</string>
    <string name="de_mix_mode_superwallpaper">Super wallpaper</string>
    <string name="de_mix_mode_superwallpaper_with_aod_desc">Always-on display, Lock screen, and Home screen</string>
    <string name="detail_reward_know_it">Got it</string>
    <string name="detail_reward_successed">Rewarded successfully</string>
    <string name="detail_reward_thanks_for_your_support">Thanks for your support!</string>
    <string name="enable_transparent_wallpaper">Use transparent wallpaper</string>
    <string name="incall_show_apply">Set as profile video</string>
    <string name="local_mode">Offline mode</string>
    <string name="local_mode_desc">Offline mode only uses local content and doesn\'t use online services</string>
    <string name="local_mode_open">Offline mode</string>
    <string name="personalize">Personalization</string>
    <string name="personalize_wallpaper_title">Wallpaper</string>
    <string name="personalized_bottom_card_image_bias">w,124:115</string>
    <string name="pref_privacy_policy">Privacy Policy</string>
    <string name="privacy_logoff_services_title">Cancel services</string>
    <string name="privacy_permission_management_description">Permissions details</string>
    <string name="privacy_permission_related_content">Permissions</string>
    <string name="privacy_phone_logoff_service_content">Cancel Themes services</string>
    <string name="privacy_revoke_agree_content">Withdrawal of consent</string>
    <string name="privacy_select_mode">Select mode</string>
    <string name="privacy_settings">Privacy</string>
    <string name="resource_download">Download</string>
    <string name="theme_setting">Settings</string>
    <string name="theme_user_agreement_remind_again">Show Terms of Use</string>
    <string name="theme_user_agreement_remind_summary">Show the Terms of Use pop-up every time you open the Themes app. This setting will take effect after you reboot your device.</string>
    <string name="transparency_pref_title">Opacity level</string>
    <string name="transparent_wallpaper">Transparent wallpaper</string>
    <string name="transparent_wallpaper_auto_start_pref_summary">Keep using transparent wallpapers after you reboot your device</string>
    <string name="transparent_wallpaper_auto_start_pref_title">Autostart</string>
    <string name="transparent_wallpaper_filter_pref_summary">Transparent wallpapers won\'t be displayed in restricted apps</string>
    <string name="transparent_wallpaper_filter_pref_title">Select apps that should work with transparent wallpapers</string>
    <string name="transparent_wallpaper_white_wallpaper">Make background white</string>
    <string name="transparent_wallpaper_white_wallpaper_tip">Transparent wallpaper looks best on white background</string>
    <string name="using_theme_next_automatic_update">Automatic updates</string>
    <string name="using_theme_next_automatic_update_summary">Update downloaded themes using WLAN when the device is locked</string>
    <string name="wallpaper_apply">Apply</string>
    <string name="wallpaper_apply_full">All</string>
    <string name="wallpaper_group_set_loop">Lock screen slideshow with similar images</string>
    <string name="wallpaper_loop_interval_desc">Set time interval for your slideshow</string>
    <string name="wallpaper_loop_interval_title">Change wallpaper</string>
    <string name="wallpaper_loop_more_options">Additional settings</string>
    <string name="wallpaper_loop_order_desc">Select the order in which slides appear</string>
    <string name="wallpaper_loop_order_title">Order of slides</string>
    <string name="wallpaper_set_as_desktop">Set as Home screen</string>
    <string name="wallpaper_set_as_lockscreen">Set as Lock screen</string>
    <string name="wallpaper_setting_title">Wallpaper</string>
</resources>