<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/de_detail_mix_dialog_item_vertical_padding"
        android:layout_marginStart="@dimen/miuix_appcompat_dialog_panel_horizontal_padding"
        android:layout_marginEnd="@dimen/miuix_appcompat_dialog_panel_horizontal_padding">
        <LinearLayout
            android:id="@+id/mix_superwallpaper_container"
            style="@style/de_MixDialogItem">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/mix_superwallpaper_title"
                    android:text="@string/de_mix_mode_superwallpaper"
                    style="@style/de_MixDialogItemTitle"/>
                <CheckBox
                    android:layout_gravity="end"
                    android:id="@+id/mix_superwallpaper_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </FrameLayout>
            <TextView
                android:id="@+id/mix_superwallpaper_desc"
                android:text="@string/de_mix_mode_superwallpaper_with_aod_desc"
                style="@style/de_MixDialogItemSubtitle"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mix_aod_container"
            style="@style/de_MixDialogItem">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/mix_aod_title"
                    android:text="@string/de_mix_mode_aod"
                    style="@style/de_MixDialogItemTitle"/>
                <CheckBox
                    android:layout_gravity="end"
                    android:id="@+id/mix_aod_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </FrameLayout>
            <TextView
                android:id="@+id/mix_aod_desc"
                android:text="@string/de_mix_mode_aod_desc"
                style="@style/de_MixDialogItemSubtitle"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mix_lockscreen_container"
            style="@style/de_MixDialogItem">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/de_mix_mode_lockscreen"
                    style="@style/de_MixDialogItemTitle"/>
                <CheckBox
                    android:layout_gravity="end"
                    android:id="@+id/mix_lockscreen_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </FrameLayout>
            <TextView
                android:id="@+id/mix_lockscreen_desc"
                android:text="@string/de_mix_mode_lockscreen_desc"
                style="@style/de_MixDialogItemSubtitle"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mix_desktop_container"
            style="@style/de_MixDialogItem">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/de_mix_mode_desktop"
                    style="@style/de_MixDialogItemTitle"/>
                <CheckBox
                    android:layout_gravity="end"
                    android:id="@+id/mix_desktop_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </FrameLayout>
            <TextView
                android:id="@+id/mix_desktop_desc"
                android:text="@string/de_mix_mode_desktop_desc"
                style="@style/de_MixDialogItemSubtitle"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mix_global_container"
            style="@style/de_MixDialogItem">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/de_mix_mode_global"
                    style="@style/de_MixDialogItemTitle"/>
                <CheckBox
                    android:layout_gravity="end"
                    android:id="@+id/mix_global_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </FrameLayout>
            <TextView
                android:id="@+id/mix_global_desc"
                android:text="@string/de_mix_mode_global_desc"
                style="@style/de_MixDialogItemSubtitle"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mix_icon_container"
            android:paddingBottom="0dp"
            style="@style/de_MixDialogItem">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/de_mix_mode_icon"
                    style="@style/de_MixDialogItemTitle"/>
                <CheckBox
                    android:layout_gravity="end"
                    android:id="@+id/mix_icon_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </FrameLayout>
            <TextView
                android:id="@+id/mix_icon_desc"
                android:text="@string/de_mix_mode_icon_desc"
                style="@style/de_MixDialogItemSubtitle"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
