<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textAppearance="@style/TextAppearance.Dialog.RingtoneApply.Choice"
        android:ellipsize="end"
        android:id="@+id/apply_lock_wallpaper"
        android:text="@string/wallpaper_set_as_lockscreen"
        android:singleLine="true"
        style="@style/ResourceBrowser.Dialog.Choice"/>
    <TextView
        android:textAppearance="@style/TextAppearance.Dialog.RingtoneApply.Choice"
        android:ellipsize="end"
        android:id="@+id/apply_desk_wallpaper"
        android:text="@string/wallpaper_set_as_desktop"
        android:singleLine="true"
        style="@style/ResourceBrowser.Dialog.Choice"/>
    <TextView
        android:textAppearance="@style/TextAppearance.Dialog.RingtoneApply.Choice"
        android:ellipsize="end"
        android:id="@+id/apply_both"
        android:text="@string/wallpaper_apply_full"
        android:singleLine="true"
        style="@style/ResourceBrowser.Dialog.Choice"/>
    <TextView
        android:textAppearance="@style/TextAppearance.Dialog.RingtoneApply.Choice"
        android:ellipsize="end"
        android:id="@+id/apply_wallpaper_gallery_loop_content"
        android:visibility="gone"
        android:text="@string/wallpaper_group_set_loop"
        android:singleLine="true"
        style="@style/ResourceBrowser.Dialog.Choice"/>
    <Button
        android:id="@+id/dialog_cancel"
        android:layout_marginTop="@dimen/dialog_cancel_margin_top"
        android:layout_marginBottom="0dp"
        style="@style/DialogCancel"/>
</LinearLayout>
