<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <Button
        android:id="@+id/apply_view_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resource_download"
        style="@style/WallpaperApplyBtn"/>
    <Button
        android:id="@+id/apply_view_single_apply"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallpaper_apply"
        style="@style/WallpaperApplyBtn"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/apply_view_double_apply_container"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/de_video_detail_apply_container_height"
        style="@style/WallpaperApplyBtn">
        <Button
            android:id="@+id/apply_view_wallpaper"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/wallpaper_apply"
            android:layout_weight="1"
            style="@style/WallpaperApplyBtn"/>
        <View
            android:background="@android:color/white"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/apply_view_incall_show"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/incall_show_apply"
            android:layout_weight="1"
            style="@style/WallpaperApplyBtn"/>
    </LinearLayout>
    <com.android.thememanager.detail.widget.ResourceDownloadingBarView
        android:id="@+id/apply_view_progress"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BottomProgressButton"/>
</merge>
